--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "^9.8.1",
     "firebase-hooks": "^0.0.1",
     "nice-try": "^3.0.0",
+    "node-polyfill-webpack-plugin": "^1.1.4",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-firebase-hooks": "^5.0.3",
